--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -5,7 +5,8 @@
     <title>Achieve</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
-</head><body>
+</head>
+<body>
   <header>
     <ul>
       <li><a href="#">Achieve</a></li>
